--- a/servicio-items-dev.properties
+++ b/servicio-items-dev.properties
@@ -1,3 +1,3 @@
 configuracion.texto=Configurando entorno Desarrollo ...
-configuracion.autor.nombre=Claudio Jesús Sáenz Aguilar
+configuracion.autor.nombre=Jesús Sáenz
 configuracion.autor.email=jesus.saenz.aguilar@gmail.com
